--- a/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/start.scala.html
+++ b/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/start.scala.html
@@ -21,11 +21,9 @@
 
 @uk.gov.hmrc.agentepayeregistrationfrontend.views.html.main_template(title = Messages("start.title"), bodyClasses = None) {
 
-    <header class="page-header">
-        <h1> @Messages("start.label")</h1>
-    </header>
-
-    <p> @Messages("start.intro")</p>
+    <h1 class="heading-xlarge">@Messages("start.title")</h1>
+    
+    <p>@Messages("start.intro")</p>
 
     <p>
         <a href="https://www.gov.uk/government/organisations/hm-revenue-customs/contact/online-services-helpdesk">@Messages("start.helpdesklink.text1")</a> @Messages("start.helpdesklink.text2")
