--- a/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/agentDetails.scala.html
+++ b/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/agentDetails.scala.html
@@ -17,28 +17,28 @@
 @import uk.gov.hmrc.agentepayeregistrationfrontend.controllers.routes.AgentEpayeRegistrationController
 @import play.api.Configuration
 @import uk.gov.hmrc.agentepayeregistrationfrontend.models.RegistrationRequest
-@import uk.gov.hmrc.play.views.html.helpers.form
-@import uk.gov.hmrc.play.views.html.helpers.input
+@import uk.gov.hmrc.play.views.html.helpers.{form, input, errorSummary}
 
 @(detailsForm : Form[RegistrationRequest])(implicit request: Request[_], messages: Messages, config: Configuration)
 
-@uk.gov.hmrc.agentepayeregistrationfrontend.views.html.main_template(title = Messages("details.contact.title"), bodyClasses = None) {
+@uk.gov.hmrc.agentepayeregistrationfrontend.views.html.main_template(title = error_prefix(detailsForm) + Messages("details.contact.title"), bodyClasses = None) {
+
+  @errorSummary(Messages("error.summary.heading"), detailsForm, Seq.empty, Some("detailsForm"))
 
   @form(
     action = AgentEpayeRegistrationController.agentDetails,
     'class -> "form js-form") {
-    <header class="page-header">
-        <h1>@Messages("details.agent.label")</h1>
-    </header>
+
+    <h1 class="heading-xlarge">@Messages("details.agent.label")</h1>
 
     <p>@Messages("details.agent.description")</p>
 
-    <div class="form-field">
+    <div class="form-group">
       @input(
         detailsForm("agentName"),
         '_label -> Messages("details.agent.agentName.label"),
         '_inputClass -> "input--medium input--cleared",
-        '_labelClass -> "bold"
+        '_labelClass -> "heading-small soft--ends"
       )
     </div>
 
@@ -51,7 +51,7 @@
     <input type="hidden" name="address.addressLine4" id="address.addressLine4" value="@detailsForm("address.addressLine4").value">
     <input type="hidden" name="address.postcode" id="address.postcode" value="@detailsForm("address.postcode").value">
 
-    <div class="form-field">
+    <div class="form-group">
       <button class="button" type="submit" id="continue">@Messages("button.continue")</button>
     </div>
   }
