--- a/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/govuk_wrapper.scala.html
+++ b/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/govuk_wrapper.scala.html
@@ -35,14 +35,20 @@
         showFeedbackLinkInBetaBanner = false)
 }
 
+@headScripts = {
+    <link href="@controllers.routes.Assets.at("stylesheets/styles.css")" media="screen" rel="stylesheet" type="text/css">
+}
 
 @head = {
 @uiLayouts.head(
     linkElem = None,
-    headScripts = None)
+    headScripts = Some(headScripts))
     <meta name="format-detection" content="telephone=no"/>
 }
 
+@scriptElement = {
+    <script src="@controllers.routes.Assets.at("javascripts/scripts.js")" type="text/javascript"></script>
+}
 @headerNavLinks = {}
 
 @insideHeader = {
@@ -63,7 +69,7 @@
 @uiLayouts.footer(analyticsToken = configuration.getString("google-analytics.token"),
     analyticsHost = configuration.getString("google-analytics.host").get,
     ssoUrl = None,
-    scriptElem = scriptElem,
+    scriptElem = Some(scriptElement),
     gaCalls = None,
     analyticsAdditionalJs = Some(gaJS))
 }
