--- a/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/agentDetails.scala.html
+++ b/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/agentDetails.scala.html
@@ -1,5 +1,5 @@
 @*
- * Copyright 2017 HM Revenue & Customs
+ * Copyright 2018 HM Revenue & Customs
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -26,7 +26,7 @@
   @errorSummary(Messages("error.summary.heading"), detailsForm, Seq.empty, Some("detailsForm"))
 
   @form(
-    action = AgentEpayeRegistrationController.agentDetails,
+    action = AgentEpayeRegistrationController.details,
     'class -> "form js-form") {
 
     <h1 class="heading-xlarge">@Messages("details.agent.label")</h1>
@@ -50,6 +50,7 @@
     <input type="hidden" name="address.addressLine3" id="address.addressLine3" value="@detailsForm("address.addressLine3").value">
     <input type="hidden" name="address.addressLine4" id="address.addressLine4" value="@detailsForm("address.addressLine4").value">
     <input type="hidden" name="address.postcode" id="address.postcode" value="@detailsForm("address.postcode").value">
+    <input type="hidden" name="pageId" id="pageId" value="agentDetails">
 
     <div class="form-group">
       <button class="button" type="submit" id="continue">@Messages("button.continue")</button>
