--- a/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/summary.scala.html
+++ b/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/summary.scala.html
@@ -1,5 +1,5 @@
 @*
- * Copyright 2017 HM Revenue & Customs
+ * Copyright 2018 HM Revenue & Customs
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -23,7 +23,7 @@
 
 @uk.gov.hmrc.agentepayeregistrationfrontend.views.html.main_template(title = Messages("summary.title"), bodyClasses = None) {
 
-  @form(action = AgentEpayeRegistrationController.summary, 'class -> "form js-form") {
+  @form(action = AgentEpayeRegistrationController.details, 'class -> "form js-form") {
 
         <input type="hidden" name="agentName" id="agentName" value="@detailsForm("agentName").value">
         <input type="hidden" name="contactName" id="contactName" value="@detailsForm("contactName").value">
@@ -34,6 +34,7 @@
         <input type="hidden" name="address.addressLine3" id="address.addressLine3" value="@detailsForm("address.addressLine3").value">
         <input type="hidden" name="address.addressLine4" id="address.addressLine4" value="@detailsForm("address.addressLine4").value">
         <input type="hidden" name="address.postcode" id="address.postcode" value="@detailsForm("address.postcode").value">
+        <input type="hidden" name="pageId" id="pageId" value="summary">
 
 
         <h1 class="heading-xlarge">@Messages("summary.title")</h1>
