[APB-2005][MP] Adding print button to reg_complete page. Fixing tests that were passing no matter what. Button may need some styling changes to make it conform to other print buttons.

--- a/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/registration_confirmation.scala.html
+++ b/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/registration_confirmation.scala.html
@@ -33,4 +33,7 @@
 </p>
 
 <p>@Messages("registrationConfirmation.noteAboutDelay")</p>
+
+    <strong><a class="print-link print-hidden js-visible" onClick="window.print()" href="" target="_blank">@Messages("button.print")</a></strong>
+
 }
