--- a/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/govuk_wrapper.scala.html
+++ b/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/govuk_wrapper.scala.html
@@ -94,6 +94,8 @@
     uiHelpers.reportAProblemLink(configuration.getString("reportAProblemPartialUrl").get, configuration.getString("reportAProblemNonJSUrl").get)
 }
 
+@titleSuffix = @{ Messages("servicename.titleSuffix") }
+
 @content = {
 @uiLayouts.main_content(article = mainContent,
     mainClass = mainClass,
@@ -104,4 +106,4 @@
     sidebar = sidebar)
 }
 
-@hmrcGovUkTemplate(Some(title), bodyClasses)(head, bodyEnd, insideHeader, afterHeader, footerTop, Some(uiLayouts.footer_links()), nav = true)(content)
+@hmrcGovUkTemplate(Some(title + " " + titleSuffix), bodyClasses)(head, bodyEnd, insideHeader, afterHeader, footerTop, Some(uiLayouts.footer_links()), nav = true)(content)
