[APB-2106][JR,SS] Changing pageId value on summary page from 'summary' to 'confirmationPage' to avoid conflict in tests

--- a/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/summary.scala.html
+++ b/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/summary.scala.html
@@ -34,7 +34,7 @@
         <input type="hidden" name="address.addressLine3" id="address.addressLine3" value="@detailsForm("address.addressLine3").value">
         <input type="hidden" name="address.addressLine4" id="address.addressLine4" value="@detailsForm("address.addressLine4").value">
         <input type="hidden" name="address.postcode" id="address.postcode" value="@detailsForm("address.postcode").value">
-        <input type="hidden" name="pageId" id="pageId" value="summary">
+        <input type="hidden" name="pageId" id="pageId" value="confirmationPage">
 
 
         <h1 class="heading-xlarge">@Messages("summary.title")</h1>
