[APB-2106][SS] updated label class

--- a/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/addressDetails.scala.html
+++ b/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/addressDetails.scala.html
@@ -39,7 +39,7 @@ action = AgentEpayeRegistrationController.details,
         @input(
             detailsForm("address.addressLine1"),
             '_label -> Messages("details.address.addressline1.label"),
-            '_inputClass -> "input--medium input--cleared",
+            '_inputClass -> "form-control input--cleared",
             '_labelClass -> "heading-small soft--ends"
         )
     </div>
@@ -48,7 +48,7 @@ action = AgentEpayeRegistrationController.details,
         @input(
             detailsForm("address.addressLine2"),
             '_label -> Messages("details.address.addressline2.label"),
-            '_inputClass -> "input--medium input--cleared",
+            '_inputClass -> "form-control input--cleared",
             '_labelClass -> "heading-small soft--ends"
         )
     </div>
@@ -57,7 +57,7 @@ action = AgentEpayeRegistrationController.details,
         @input(
             detailsForm("address.addressLine3"),
             '_label -> Messages("details.address.addressline3.label"),
-            '_inputClass -> "input--medium input--cleared",
+            '_inputClass -> "form-control input--cleared",
             '_labelClass -> "heading-small soft--ends"
         )
     </div>
@@ -66,7 +66,7 @@ action = AgentEpayeRegistrationController.details,
         @input(
             detailsForm("address.addressLine4"),
             '_label -> Messages("details.address.addressline4.label"),
-            '_inputClass -> "input--medium input--cleared",
+            '_inputClass -> "form-control input--cleared",
             '_labelClass -> "heading-small soft--ends"
         )
     </div>
@@ -75,7 +75,7 @@ action = AgentEpayeRegistrationController.details,
         @input(
             detailsForm("address.postcode"),
             '_label -> Messages("details.address.postcode.label"),
-            '_inputClass -> "input--small input--cleared postcode",
+            '_inputClass -> "form-control input--cleared postcode input--small",
             '_labelClass -> "heading-small soft--ends"
         )
     </div>
