--- a/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/agentDetails.scala.html
+++ b/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/agentDetails.scala.html
@@ -40,7 +40,7 @@
       @input(
         detailsForm("agentName"),
         '_label -> Messages("details.agent.agentName.label"),
-        '_inputClass -> "input--medium input--cleared",
+        '_inputClass -> "form-control input--cleared",
         '_labelClass -> "heading-small soft--ends"
       )
     </div>
