--- a/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/contactDetails.scala.html
+++ b/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/contactDetails.scala.html
@@ -40,7 +40,7 @@ action = AgentEpayeRegistrationController.details,
         @input(
             detailsForm("contactName"),
             '_label -> Messages("details.contact.contactName.label"),
-            '_inputClass -> "input--medium input--cleared",
+            '_inputClass -> "form-control input--cleared",
             '_labelClass -> "heading-small soft--ends"
         )
     </div>
@@ -49,7 +49,7 @@ action = AgentEpayeRegistrationController.details,
         @input(
             detailsForm("emailAddress"),
             '_label -> Messages("details.contact.emailAddress.label"),
-            '_inputClass -> "input--medium input--cleared",
+            '_inputClass -> "form-control input--cleared",
             '_labelClass -> "heading-small soft--ends"
         )
     </div>
@@ -58,7 +58,7 @@ action = AgentEpayeRegistrationController.details,
         @input(
             detailsForm("telephoneNumber"),
             '_label -> Messages("details.contact.telephoneNumber.label"),
-            '_inputClass -> "input--medium input--cleared",
+            '_inputClass -> "form-control input--cleared",
             '_labelClass -> "heading-small soft--ends"
         )
     </div>
