--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -1,3 +1,9 @@
-#error-summary-display:focus{
+#error-summary-display:focus, .button--link-style:focus{
     outline: 3px solid #ffbf47;
+}
+.button--link-style:focus{
+    background-color: #ffbf47;
+}
+.button--link-style:disabled{
+    background-color: transparent !important;
 }
