--- a/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/registration_confirmation.scala.html
+++ b/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/registration_confirmation.scala.html
@@ -23,15 +23,13 @@
 @uk.gov.hmrc.agentepayeregistrationfrontend.views.html.main_template(title = Messages("registrationConfirmation.title"), bodyClasses = None) {
 
     <div class="transaction-banner--complete">
-        <h1 class="transaction-banner__heading">@Messages("registrationConfirmation.label")<span class="heading-medium display-block">@payeAgentReference</span></h1>
+        <h1 class="transaction-banner__heading">@Messages("registrationConfirmation.label", payeAgentReference)</h1>
+        <h2>@Messages("registrationConfirmation.h2")</h2>
     </div>
 
-    <p>
-        <strong>@Messages("registrationConfirmation.boldSaveReminder")</strong>
-        @Messages("registrationConfirmation.normalSaveReminder")
-    </p>
+    <h3 class="heading-medium">@Messages("registrationConfirmation.h3")</h3>
 
-    <p>@Messages("registrationConfirmation.noteAboutDelay")</p>
+    <p>@Messages("registrationConfirmation.normalSaveReminder")</p>
 
     <strong><a class="print-link print-hidden js-visible" onClick="window.print()" href="" target="_blank">@Messages("button.print")</a></strong>
 
