[APB-2106][SS] added relative urls for contact-frontend

--- a/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/govuk_wrapper.scala.html
+++ b/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/govuk_wrapper.scala.html
@@ -30,8 +30,8 @@
 
 @betaBanner = {
     @uiLayouts.betaBanner(userLoggedIn = false,
-        betaFeedbackUrl = configuration.getString("contact-frontend-host").get+"/contact/beta-feedback-unauthenticated",
-        betaFeedbackUnauthenticatedUrl = configuration.getString("contact-frontend-host").get+"/contact/beta-feedback-unauthenticated",
+        betaFeedbackUrl = "/contact/beta-feedback-unauthenticated",
+        betaFeedbackUnauthenticatedUrl = "/contact/beta-feedback-unauthenticated",
         showFeedbackLinkInBetaBanner = true)
 }
 
