[APB-2106][SS] fixed colour contrast accessibility issue on confirmation page

--- a/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/registration_confirmation.scala.html
+++ b/app/uk/gov/hmrc/agentepayeregistrationfrontend/views/registration_confirmation.scala.html
@@ -24,10 +24,10 @@
 
     <div class="transaction-banner--complete">
         <h1 class="transaction-banner__heading">@Messages("registrationConfirmation.label", payeAgentReference)</h1>
-        <h2>@Messages("registrationConfirmation.h2")</h2>
+        <p class="font-large">@Messages("registrationConfirmation.h2")</p>
     </div>
 
-    <h3 class="heading-medium">@Messages("registrationConfirmation.h3")</h3>
+    <h2 class="heading-medium">@Messages("registrationConfirmation.h3")</h2>
 
     <p>@Messages("registrationConfirmation.normalSaveReminder")</p>
 
